--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.4",
-    "pinia": "^2.0.24"
+    "pinia": "^2.0.24",
+    "cookie": "^0.5.0",
+    "uuid": "^8.3.1"
   }
 }
